--- a/Projeto OcarinaOfTime/style.css
+++ b/Projeto OcarinaOfTime/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+#title{
+    color: #FFF;
+    font-family: 'Kanit', sans-serif;
+    font-size: 40px;
 }
 body {
     display: flex;
@@ -10,17 +16,22 @@ body {
     align-items: center;
     flex-direction: column;
     background-color: rgb(152,224,213);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Kanit', sans-serif;
+    gap: 35px;
 }
-p{
-
+#ocarina{
+    width:100%;
+   height:550px;
+   object-fit:cover;
+   object-position:50% 50%;
+   width: 500px;
+   height: 500px;
+   border: 5px solid #FFF;
 }
-.keys {
-    display: grid;
-    grid-template-columns: repeat;
+.keys{
+    display: flex;
     gap: 10px;
 }
-
 .key {
     width: 90px;
     height: 55px;
@@ -33,8 +44,8 @@ p{
     font-weight: bold;
 }
 .key.active {
-    border: 5px solid rgb(211, 62, 32);
-    color:  rgb(211, 62, 32);
+    border: 5px solid rgb(96,103,208);
+    color:  rgb(96,103,208);
 }
 
 .composer {
@@ -66,3 +77,4 @@ footer {
     color: #FFF;
     font-size: 15px;
 }
+
