--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 }
 body {
     display: flex;
-    min-height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -19,6 +18,25 @@ body {
     font-family: 'Kanit', sans-serif;
     gap: 35px;
 }
+
+header{
+    width: 100vw;
+}
+
+nav{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+nav img{
+    border-width: 1px;
+    border-color: white;
+    border-radius: 20%;
+    box-shadow: 0 0 #FFF;
+    width: 50px;
+}
+
 #ocarina{
     width:100%;
    height:550px;
